--- a/streaming.html
+++ b/streaming.html
@@ -60,7 +60,7 @@
     <!--character-details-->
         <!-- <p>Bruce Bayne invite deadpool to kill the enemy how make distrub bat To the Kill The Anymens How MaKE him will be ie.</p> -->
     </div>
-<a href="http://www.appcreator24.com/open918048/okiutv" target="_top"><dir class="redondo"><p>VER</p></dir></a>
+<!-- <a href="http://www.appcreator24.com/open918048/okiutv" target="_top"><dir class="redondo"><p>VER</p></dir></a> -->
     </div>
     </li>
     <!--2------------------------------>
@@ -77,7 +77,7 @@
           <!--character-details-->
               <!-- <p>Bruce Bayne invite deadpool to kill the enemy how make distrub bat To the Kill The Anymens How MaKE him will be ie.</p> -->
           </div>
-      <a href="http://www.appcreator24.com/open918048/tiendall" target="_top"><dir class="redondo"><p>VER</p></dir></a>    
+      <!-- <a href="http://www.appcreator24.com/open918048/tiendall" target="_top"><dir class="redondo"><p>VER</p></dir></a>     -->
           </div>
           </li>
     <!--3------------------------------>
@@ -94,7 +94,7 @@
     <!--character-details-->
         <!-- <p>Bruce Bayne invite deadpool to kill the enemy how make distrub bat To the Kill The Anymens How MaKE him will be ie.</p> -->
     </div>
-<a href="http://www.appcreator24.com/open918048/okiurad" target="_top"><dir class="redondo"><p>VER</p></dir></a>    
+<!-- <a href="http://www.appcreator24.com/open918048/okiurad" target="_top"><dir class="redondo"><p>VER</p></dir></a>     -->
     </div>
     </li>
     <!--4------------------------------>
@@ -111,7 +111,7 @@
           <!--character-details-->
               <!-- <p>Bruce Bayne invite deadpool to kill the enemy how make distrub bat To the Kill The Anymens How MaKE him will be ie.</p> -->
           </div>
-      <a href="http://www.appcreator24.com/open918048/streaming" target="_top"><dir class="redondo"><p>VER</p></dir></a>    
+      <!-- <a href="http://www.appcreator24.com/open918048/streaming" target="_top"><dir class="redondo"><p>VER</p></dir></a>     -->
           </div>
           </li>
     <!--5------------------------------>
@@ -128,7 +128,7 @@
     <!--character-details-->
         <!-- <p>Bruce Bayne invite deadpool to kill the enemy how make distrub bat To the Kill The Anymens How MaKE him will be ie.</p> -->
     </div>
-<a href="http://www.appcreator24.com/open918048/servill" target="_top"><dir class="redondo"><p>VER</p></dir></a>    
+<!-- <a href="http://www.appcreator24.com/open918048/servill" target="_top"><dir class="redondo"><p>VER</p></dir></a>     -->
     </div>
     </li>
     <!--6------------------------------>
@@ -145,7 +145,7 @@
     <!--character-details-->
         <!-- <p>Bruce Bayne invite deadpool to kill the enemy how make distrub bat To the Kill The Anymens How MaKE him will be ie.</p> -->
     </div>
-<a href="http://www.appcreator24.com/open918048/juegoss" target="_top"><dir class="redondo"><p>VER</p></dir></a>    
+<!-- <a href="http://www.appcreator24.com/open918048/juegoss" target="_top"><dir class="redondo"><p>VER</p></dir></a>     -->
     </div>
     </li>
     <!--7------------------------------>
@@ -162,7 +162,7 @@
     <!--character-details-->
         <!-- <p>Bruce Bayne invite deadpool to kill the enemy how make distrub bat To the Kill The Anymens How MaKE him will be ie.</p> -->
     </div>
-<a href="http://www.appcreator24.com/open918048/videoss" target="_top"><dir class="redondo"><p>VER</p></dir></a>    
+<!-- <a href="http://www.appcreator24.com/open918048/videoss" target="_top"><dir class="redondo"><p>VER</p></dir></a>     -->
     </div>
     </li>
     <!--8------------------------------>
@@ -179,7 +179,7 @@
     <!--character-details-->
         <!-- <p>Bruce Bayne invite deadpool to kill the enemy how make distrub bat To the Kill The Anymens How MaKE him will be ie.</p> -->
     </div>
-<a href="http://www.appcreator24.com/open918048/videoss" target="_top"><dir class="redondo"><p>VER</p></dir></a>    
+<!-- <a href="http://www.appcreator24.com/open918048/videoss" target="_top"><dir class="redondo"><p>VER</p></dir></a>     -->
     </div>
     </li>
 
